[current]

- skybox
- roof type 5.6
- action for load texture library
- fix to texture library xml format

[2012-04-09]
- new textures from wiki
- new configuration supporting different textures for material 
- fix wiki texture configuration for new texture configuration
- mock for roof type 8.0  

[2012-04-08]
- solid boolean - walls with holes
- mac support?
- roof presets

[2012-03-13]
- wood different tree heights
- 3d menu by Alt-D
- custom model layer configuration
- models clean up

[2012-02-23]
- custom layer ui configuration
- water fix
- roof type 9.0 fix
- clean up 

[2012-02-12]
- support for title renderer
- custom models layer
- clean up
- dependency injections - guice

[2011-12-27]
- tag natural=wood, landuse=forest + tree="number of trees in area, max 1000"
- tag nature=tree_row + tree="number of trees in row"
- download textures from wiki page: http://wiki.openstreetmap.org/wiki/Kendzi3d/textures
- enable/disable autostart


[2011-12-03]
- support for relation clone:height for tags barrier and building
- support for tag barrier:part=fence
- support for tag fence:type=balustrade

- tags height, min_height for fence

[2011-11-26]
- water fix
- roof type 2.2 fix
- support for tag building:color
- support for tag roof:color
- support for alias in tag building:roof:shape 
- support for alias in tag roof:shape

- support for height, min_height in [m], [ft], [feet]
- support for tag est_height (i don't like it)
- support for tag building:roof:orientation=along|across
- support for tag direction on buildings
- tree models for type: unknown|broad_leafed|conifer

[2011-11-19]
- support for dormer type B
- support for roof type word alias as 3dr:type=flat|gabled|gambrel|half hipped|hipped|pitched|pyramidal|skillion
- building:part=yes

- initial support for colors. They can't be mix with tags: building:facade:material, building:roof:material. Color list: http://download.oracle.com/javase/6/docs/api/java/awt/Color.html
	- building:facade:color 